feat: add EPs for current student
