# api/merged-openapi.yaml
@@ -20,6 +20,44 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HealthCheckResponse'
+  /user-management/api/student/current/detail:
+    get:
+      tags:
+        - UserManagement
+      summary: getCurrentStudent
+      description: Retrieve the currently authenticated student's details
+      operationId: getCurrentStudentDetail
+      security:
+        - keycloak_auth:
+            - USER
+            - TUTOR
+            - ADMIN
+      responses:
+        '200':
+          description: Current student details retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseStudentDetail'
+  /user-management/api/student/current/navbar:
+    get:
+      tags:
+        - UserManagement
+      summary: getCurrentStudent
+      description: Retrieve the currently authenticated student's details
+      operationId: getCurrentStudentForNavbar
+      security:
+        - keycloak_auth:
+            - USER
+            - TUTOR
+            - ADMIN
+      responses:
+        '200':
+          description: Current student details retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseStudentNavbar'
   /user-management/api/local-student/register:
     post:
       tags:
@@ -389,6 +427,36 @@ components:
           type: string
         emailMarketingChecked:
           type: boolean
+    ResponseStudentDetail:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+          format: email
+        phoneNumber:
+          type: string
+        facultyId:
+          type: string
+          format: uuid
+        gender:
+          $ref: '#/components/schemas/GenderEnum'
+    ResponseStudentNavbar:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        firstName:
+          type: string
+        lastName:
+          type: string
     InternationalStudentAnonymous:
       type: object
       properties:
